@@ -12,17 +12,20 @@ base {
 
 repositories {
     maven {
-        name = 'dmulloy2-repo'
-        url = 'https://repo.dmulloy2.net/repository/public/'
+        name = 'codemc-releases'
+        url = 'https://repo.codemc.io/repository/maven-releases/'
     }
 }
 
 dependencies {
     implementation project(":api")
 
-    compileOnly "io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
+    compileOnly "org.jetbrains:annotations:24.0.0"
     compileOnly 'me.clip:placeholderapi:2.11.5'
-    compileOnly 'com.comphenix.protocol:ProtocolLib:5.3.0'
+    compileOnly 'com.github.retrooper:packetevents-spigot:2.12.2'
+    
+    implementation "net.kyori:adventure-platform-bukkit:4.3.4"
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation "com.zaxxer:HikariCP:5.1.0"
@@ -80,12 +83,14 @@ shadowJar {
     destinationDirectory.set(rootProject.layout.buildDirectory.dir('libs'))
     relocate 'com.zaxxer.hikari', 'com.darkbladedev.engine.libs.hikari'
     relocate 'com.google.gson', 'com.darkbladedev.engine.libs.gson'
+    relocate 'net.kyori', 'com.darkbladedev.engine.libs.kyori'
 }
 
 build.dependsOn shadowJar
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
 publishing {
